# ixxor

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/ixxor/: CMakeLists.txt  app.cpp  app.hpp  ixxor.m.cpp
cmake/: config.cmake  macros.cmake
cmake/macros/: ixxor_add_lib_test.cmake  ixxor_add_module.cmake  ixxor_add_module_test.cmake  ixxor_add_plugin_test.cmake
ixxor/: CMakeLists.txt
ixxor/appenv/: CMakeLists.txt  path_util.cpp  path_util.hpp  rc_config.cpp  rc_config.hpp  sys_util.cpp  sys_util.hpp
ixxor/core/: CMakeLists.txt  currency.cpp  currency.hpp  date.hpp  datetime.hpp  duration.hpp  exchange.cpp  exchange.hpp  futures.hpp  instrument.cpp  instrument.hpp  price.hpp  ptime.hpp  side.hpp  symbol.hpp  tick.hpp  tick_series.cpp  tick_series.hpp  tick_util.hpp  time_series.hpp  volume.hpp
ixxor/core/detail/: identifier.hpp
ixxor/itl/: CMakeLists.txt  ring.cpp  ring.hpp  ring_iterator.ipp
ixxor/kernel/: CMakeLists.txt  data_source.cpp  data_source.hpp  indicator.cpp  indicator.hpp  indicator_registry.hpp  kernel.cpp  kernel.hpp  kernel_component.hpp  kernel_component_entry.hpp  module_util.hpp  protobuf.hpp
ixxor/math/: accumulator.cpp  accumulator.hpp
ixxor/maths/: CMakeLists.txt  accumulator.cpp  accumulator.hpp
mods/: CMakeLists.txt
mods/testmod1/: CMakeLists.txt  my_i1.hpp  my_i2.hpp  rnd_source.cpp  rnd_source.hpp  testmod1.cpp
src/kernel/: CMakeLists.txt  kernel.cpp  kernel.hpp
src/libs/kernel/: kernel.hpp
src/mods/: CMakeLists.txt
src/mods/testmod1/: CMakeLists.txt
test/: CMakeLists.txt
test/module_test/: CMakeLists.txt  module_test.m.cpp
tests/: CMakeLists.txt
tests/libs/: CMakeLists.txt
tests/libs/core_test/: CMakeLists.txt  time_series.t.cpp
tests/libs/itl_test/: CMakeLists.txt  ring.t.cpp
tests/libs/math_test/: CMakeLists.txt  accumulator.t.cpp
tests/libs/maths_test/: CMakeLists.txt  accumulator.t.cpp
tests/mods/: CMakeLists.txt
tests/mods/testmod1_test/: CMakeLists.txt  loading.t.cpp  rnd_source.t.cpp
tests/module_test/: CMakeLists.txt  module_test.m.cpp
